# synapsis

./: .gitignore  Cargo.toml  README.md  Rocket.toml  flake.nix  generate_test_data.py  many_perf_tests.sh  todo.md
src/: client.rs  crypto.rs  lib.rs  network.rs  server.rs
tests/: integration_test.rs
