[package]
name = "synapsis"
version = "0.1.0"
authors = ["Grant VanDomelen <grant.vandomelen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "synapsis"
path = "src/lib.rs"

[dependencies]
rand_core = "0.6.1"
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rust-crypto = "0.2.36"
rust-elgamal = { version = "0.4.0", features = ["std", "enable-serde"] }
