[package]
name = "synapsis"
version = "0.1.0"
authors = ["Grant VanDomelen <grant.vandomelen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "synapsis"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rust-crypto = "0.2.36"
byteorder = "1.4.2"
p256 = { version = "0.7.2", features = ["ecdsa"] }
ecies-ed25519 = { version = "0.5.0", features = ["serde"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_44"]
