[package]
name = "synapsis"
version = "0.1.0"
authors = ["Grant VanDomelen <grant.vandomelen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "synapsis"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.2"
chrono = { version = "0.4.35", features = ["serde"] }
ctrlc = "3.1.8"
derive_more = "0.99.17"
ecies-ed25519 = { version = "0.5.0", features = ["serde"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
p256 = { version = "0.7.2", features = ["ecdsa"] }
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
rocket = "0.4.7"
rocket_contrib = "0.4.7"
rpassword = "5.0.1"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
duration-string = "0.3.0"
